SourceCode/k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
        version: v2
    spec:
      imagePullSecrets:
        - name: backend1-acr-secret
      containers:
        - name: backend
          image: webapp2.azurecr.io/api:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
